Fix icon not centered in circle indicators

--- a/src/components/processindicator/_processindicator.scss
+++ b/src/components/processindicator/_processindicator.scss
@@ -152,10 +152,10 @@ $indicator-current-size: ($indicator-size * 1.6);
       content: '';
       display: inline-block;
       height: 0.15em;
-      left: 0.14em;
+      left: 0.12em;
       position: absolute;
-      top: 0.54em;
-      width: ($indicator-size * 0.82);
+      top: 0.57em;
+      width: ($indicator-size * 0.78);
     }
 
     &::before {
@@ -171,7 +171,7 @@ $indicator-current-size: ($indicator-size * 1.6);
 
       &::before,
       &::after {
-        left: 0.51em;
+        left: 0.5em;
         top: 0.93em;
       }
     }
@@ -190,7 +190,7 @@ $indicator-current-size: ($indicator-size * 1.6);
       height: 100%;
       position: relative;
       text-align: center;
-      top: 0.17em;
+      top: 0.18em;
       width: 100%;
 
       @include antialiased();
@@ -209,7 +209,7 @@ $indicator-current-size: ($indicator-size * 1.6);
       border: 0.15em solid $theme-color-palette-white;
       content: '';
       height: 50%;
-      left: 0.37em;
+      left: 0.35em;
       position: absolute;
       top: 0.37em;
       width: 50%;
@@ -239,6 +239,19 @@ $indicator-current-size: ($indicator-size * 1.6);
     width: ($indicator-size / 2);
   }
 
+}
+
+.process-indicator {
+  &.compact {
+    .indicator {
+      &.rejected {
+        &::before,
+        &::after {
+          width: ($indicator-size * 0.82);
+        }
+      }
+    }
+  }
 }
 
 .process-indicator,
@@ -273,6 +286,34 @@ $indicator-current-size: ($indicator-size * 1.6);
     &.more-info {
       &::before {
         top: 0.25em;
+      }
+    }
+
+    &.rejected {
+      &::before,
+      &::after {
+        width: ($indicator-size * 0.82);
+      }
+    }
+
+    &.time-out {
+      &::before {
+        left: 0.4em;
+        top: 0.36em;
+      }
+    }
+  }
+}
+
+.is-safari {
+  .indicator {
+    &.time-out {
+      &::before {
+        left: 0.37em;
+      }
+
+      &::after {
+        left: 0.97em;
       }
     }
   }
